# ranksmith

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.ko.md  README.md  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
docs/specs/: TEMPLATE.md  rankgpt.md  spec_async_support.md  spec_benchmark_evaluation.md  spec_examples.md  spec_mteb_reranking_evaluation.md  spec_pairwise_ranking_prompting.md
docs/superpowers/plans/: 2026-05-18-mteb-reranking-evaluation.md  2026-05-19-pairwise-ranking-prompting.md
docs/wiki/: 00_context.md  01_decisions.md  02_architecture.md  03_reference_processing.md  04_references_index.md  05_open_questions.md  06_verification_policy.md  07_release.md
docs/wiki/references/: pairwise_ranking_prompting.md  rankgpt.md
examples/: pairwise_prp.py  rankgpt_async.py  rankgpt_sync.py
scripts/: compare_reranking.py  evaluate_mteb_reranking.py  verify.sh
src/ranksmith/: __init__.py  _benchmark.py  _metrics.py  _mteb_eval.py  _providers.py  azure.py  errors.py  strategies.py  types.py
tests/: test_async_providers.py  test_benchmark_fixture.py  test_benchmark_runner.py  test_examples.py  test_mteb_eval.py  test_ranksmith.py  test_usage_hook.py
tests/fixtures/: reranking_smoke_fixture.SOURCES.md  reranking_smoke_fixture.jsonl
