[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ranksmith"
version = "0.1.0"
description = "Forge better rankings from candidate documents with LLM reranking."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ranksmith contributors" }]
keywords = ["llm", "reranking", "rag", "azure-openai", "rank"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["openai>=1.0.0"]

[project.urls]
Homepage = "https://github.com/pko89403/ranksmith"
Repository = "https://github.com/pko89403/ranksmith"
Issues = "https://github.com/pko89403/ranksmith/issues"

[dependency-groups]
dev = [
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mteb>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ranksmith"]

[tool.hatch.build]
exclude = [
    "/.github",
    "/.uv-cache",
    "/.venv",
    "/.mypy_cache",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.githooks",
    "/AGENTS.md",
    "/docs",
    "/dist",
    "/examples",
    "/scripts",
    "/tests",
    "/uv.lock",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
